# ship-traffic-generator

./: .buildinfo  .coveragerc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  AUTHORS.rst  CHANGELOG.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  LICENSE.html  README.html  README.md  STYLEGUIDE.html  STYLEGUIDE.md  _sync_diff_report.csv  api.html  app.html  azure-docbuild.yml  azure-pipelines.yml  condaenv.yml  contributing.html  genindex.html  history.html  index.html  input_files.html  installation.html  modules.html  objects.inv  output_files.html  py-modindex.html  pyproject.toml  pytest.ini  ruff.toml  search.html  (+12 more)
.github/workflows/: _build_and_publish_documentation.yml  _build_package.yml  _code_quality.yml  _merge_into_release.yml  _publish_package.yml.disabled  _requirements.yml  _requirements_files.yml  _test.yml  _test_future.yml  build-push-acr  build-push-acr.yml  nightly_build.yml  publish_release.yml  pull_request_to_main.yml  push.yml  push_to_main.yml  push_to_release.yml
_autosummary/: trafficgen.check_land_crossing.html  trafficgen.encounter.html  trafficgen.marine_system_simulator.html  trafficgen.plot_traffic_situation.html  trafficgen.read_files.html  trafficgen.ship_traffic_generator.html  trafficgen.types.DataPoint.html  trafficgen.types.Encounter.html  trafficgen.types.EncounterType.html  trafficgen.types.Initial.html  trafficgen.types.InterpolationMethod.html  trafficgen.types.OwnShip.html  trafficgen.types.OwnShipInitial.html  trafficgen.types.RouteData.html  trafficgen.types.ShipStatic.html  trafficgen.types.SituationInput.html  trafficgen.utils.html  trafficgen.write_traffic_situation_to_file.html
_modules/: index.html
_modules/trafficgen/: check_land_crossing.html  encounter.html  marine_system_simulator.html  plot_traffic_situation.html  read_files.html  utils.html
_sources/: CHANGELOG.md.txt  LICENSE.md.txt  README.md.txt  STYLEGUIDE.md.txt  index.rst.txt  input_files.rst.txt  installation.rst.txt  trafficgen.cli.rst.txt  trafficgen.encounter.rst.txt  trafficgen.plot_traffic_situation.rst.txt  trafficgen.rst.txt  trafficgen.ship_traffic_generator.rst.txt
_sources/_autosummary/: trafficgen.check_land_crossing.rst.txt  trafficgen.encounter.rst.txt  trafficgen.marine_system_simulator.rst.txt  trafficgen.types.AisNavStatus.rst.txt  trafficgen.types.BaseModelConfig.rst.txt  trafficgen.types.EncounterType.rst.txt  trafficgen.types.Initial.rst.txt  trafficgen.types.InterpolationMethod.rst.txt  trafficgen.types.OwnShip.rst.txt  trafficgen.types.OwnShipInitial.rst.txt  trafficgen.types.RouteData.rst.txt  trafficgen.types.Ship.rst.txt  trafficgen.types.SituationInput.rst.txt  trafficgen.types.SituationInputJson.rst.txt  trafficgen.types.StringIntEnumMixin.rst.txt  trafficgen.types.TargetShip.rst.txt  trafficgen.types.Waypoint.rst.txt  trafficgen.types.rst.txt  trafficgen.utils.rst.txt  trafficgen.write_traffic_situation_to_file.rst.txt
branch/main/: .buildinfo  CHANGELOG.html  LICENSE.html  README.html  STYLEGUIDE.html  api.html  app.html  authors.html  contributing.html  genindex.html  history.html  index.html  input_files.html  installation.html  modules.html  objects.inv  output_files.html  py-modindex.html  search.html  searchindex.js  trafficgen.check_land_crossing.html  trafficgen.cli.html  trafficgen.encounter.html  trafficgen.html  trafficgen.marine_system_simulator.html  trafficgen.plot_traffic_situation.html  trafficgen.read_files.html  trafficgen.ship_traffic_generator.html  trafficgen.types.html  trafficgen.utils.html  trafficgen.write_traffic_situation_to_file.html  usage.html
data/baseline_situations_generated/: traffic_situation_01.json  traffic_situation_02.json  traffic_situation_03.json  traffic_situation_04.json  traffic_situation_05.json  traffic_situation_06.json  traffic_situation_07.json  traffic_situation_08.json  traffic_situation_09.json  traffic_situation_1.json  traffic_situation_10.json  traffic_situation_11.json  traffic_situation_12.json  traffic_situation_13.json  traffic_situation_14.json  traffic_situation_15.json  traffic_situation_16.json  traffic_situation_17.json  traffic_situation_18.json  traffic_situation_19.json  traffic_situation_2.json  traffic_situation_20.json  traffic_situation_21.json  traffic_situation_22.json  traffic_situation_23.json  traffic_situation_24.json  traffic_situation_25.json  traffic_situation_26.json  traffic_situation_27.json  traffic_situation_28.json  traffic_situation_29.json  traffic_situation_3.json  traffic_situation_30.json  traffic_situation_31.json  traffic_situation_32.json  traffic_situation_33.json  traffic_situation_34.json  traffic_situation_35.json  traffic_situation_36.json  traffic_situation_37.json  (+25 more)
data/baseline_situations_input/: baseline_situation_01_1_ts.json  baseline_situation_02_1_ts.json  baseline_situation_03_1_ts.json  baseline_situation_04_1_ts.json  baseline_situation_05_1_ts.json  baseline_situation_06_2_ts.json  baseline_situation_07_2_ts.json  baseline_situation_08_2_ts.json  baseline_situation_09_2_ts.json  baseline_situation_10_2_ts.json  baseline_situation_11_2_ts.json  baseline_situation_12_2_ts.json  baseline_situation_13_2_ts.json  baseline_situation_14_2_ts.json  baseline_situation_15_2_ts.json  baseline_situation_16_2_ts.json  baseline_situation_17_2_ts.json  baseline_situation_18_2_ts.json  baseline_situation_19_2_ts.json  baseline_situation_20_2_ts.json  baseline_situation_21_3_ts.json  baseline_situation_22_3_ts.json  baseline_situation_23_3_ts.json  baseline_situation_24_3_ts.json  baseline_situation_25_3_ts.json  baseline_situation_26_3_ts.json  (+29 more)
docs/: Makefile  conf.py  index.rst  input_files.rst  make.bat  modules.rst  trafficgen.marine_system_simulator.rst  trafficgen.read_files.rst  trafficgen.rst  trafficgen.types.rst  trafficgen.utils.rst  trafficgen.write_traffic_situation_to_file.rst  usage.rst
docs/source/: LICENSE.md  (+13 more)
k8s/: deployment.yaml
tests/: __init__.py  conftest.py  test_read_files.py  test_trafficgen.py  test_types.py  test_write_files.py
(+137 files in other folders)
