[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = [
    "src/my_package",
    "tests",
    ".coveragerc",
    ".editorconfig",
    ".pre-commit-config.yaml",
    "manage.py",
    "pyproject.toml",
    "pytest.ini",
    "ruff.toml",
    "uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/trafficgen",
]

[project]
name = "trafficgen"
version = "0.7.0"
description = "Automatic generation of ship traffic situations from a set of predefined situations"
readme = "README.md"
requires-python = ">= 3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Tom Arne Pedersen", email = "Tom.Arne.Pedersen@dnv.com" },
    { name = "Claas Rostock", email = "Claas.Rostock@dnv.com" },
    { name = "Minos Hemrich", email = "Minos.Hemrich@dnv.com" },
]
testers = [
    { name = "Grunde Løvoll", email = "Grunde.Lovoll@dnv.com" },
    { name = "Stephanie Kemna", email = "Stephanie.Kemna@dnv.com" },
]
keywords = [
    "traffic generator",
    "simulation",
    "testing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    # "Operating System :: MacOS",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "dictIO>=0.4.0",
    "numpy>=1.25,<2.0",
    "matplotlib>=3.7.2",
    "basemap>=1.3.8",
    "basemap-data-hires>=1.3.2",
    "global-land-mask>=1.0.0",
    "folium>=0.14.0",
]

[project.optional-dependencies]


[project.urls]
Homepage = "https://github.com/dnv-opensource/ship-traffic-generator"
# Documentation = "https://dnv-innersource.github.io/my-package/README.html"
Repository = "https://github.com/dnv-opensource/ship-traffic-generator.git"
Issues = "https://github.com/dnv-opensource/ship-traffic-generator/issues"
Changelog = "https://github.com/dnv-innersource/ship-traffic-generator/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8.3",
    "pyright>=1.1.390",
    "mypy>=1.13",
    "sourcery>=1.27",
    "pre-commit>=4.0",
    "Sphinx>=8.1",
    "sphinx-argparse-cli>=1.19",
    "sphinx-autodoc-typehints>=2.5",
    "sphinxcontrib-mermaid>=1.0.0",
    "sphinx-click>=6.0.0",
    "myst-parser>=4.0",
    "furo>=2024.8",
    "jupyter>=1.1",
    "pandas-stubs>=2.2",
    "pydantic>=2.5",
    "click>=8.1",
    "click-log>=0.4.0",
]

[project.scripts]
trafficgen = "trafficgen.cli:main"

[tool.mypy]
plugins = [
    "numpy.typing.mypy_plugin",
]
mypy_path = "stubs"
files = [
    "src",
    "tests",
]
exclude = [
    "^src/folder_to_be_excluded/",
]
check_untyped_defs = true
disable_error_code = [
    "misc",
    "import-untyped",
]


[tool.pyright]
stubPath = "stubs"
include = [
    "src",
    "tests",
    "demos",
]
exclude = [
    "src/folder_to_be_excluded",
]

typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingParameterType = "error"
reportUnknownParameterType = "warning"
reportUnknownMemberType = "warning"                # consider to set to `false` if you work a lot with matplotlib and pandas, which are both not properly typed and known to trigger this warning
reportMissingTypeArgument = "error"
reportPropertyTypeMismatch = "error"
reportFunctionMemberAccess = "warning"
reportPrivateUsage = "warning"
reportTypeCommentUsage = "warning"
reportIncompatibleMethodOverride = "warning"
reportIncompatibleVariableOverride = "error"
reportInconsistentConstructor = "error"
reportOverlappingOverload = "warning"
reportUninitializedInstanceVariable = "warning"
reportCallInDefaultInitializer = "warning"
reportUnnecessaryIsInstance = "information"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportUnusedCallResult = "warning"
reportUnusedExpression = "warning"
reportMatchNotExhaustive = "warning"
reportShadowedImports = "warning"
reportUntypedFunctionDecorator = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedBaseClass = "error"
reportUntypedNamedTuple = "warning"
reportUnnecessaryTypeIgnoreComment = "information"
# Activate the following rules only locally and temporary, i.e. for a QA session.
# (For server side CI they are considered too strict.)
# reportMissingTypeStubs = true
# reportConstantRedefinition = "warning"
# reportImportCycles = "warning"
# reportImplicitStringConcatenation = "warning"
